[package]
name = "nino"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Alves"]
description = "Gameboy DMG-01 emulator library"
readme = "README.md"
repository = "https://github.com/overthemil/nino/"
license = "MIT"
keywords = ["dmg", "gameboy", "emulator"]
categories = ["emulators"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
